--- a/styles/room.css
+++ b/styles/room.css
@@ -47,13 +47,13 @@ html, body {
     left: 0;
     right: 0;
     margin: 0 auto;
-    padding: 25px 20px 10px 20px;
+    padding: 25px 20px 10px 27px;
     display: flex;
     height: 100%;
     background: linear-gradient(rgba(10, 34, 64, 0.1), rgba(10, 34, 64, 1));
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    
 }
 
 .rooms {
@@ -85,6 +85,29 @@ html, body {
     margin-top: 150px;
 }
 
+.bestPrice {
+    display: none;
+    flex-direction: row;
+    margin-top: 30px;
+    position: absolute;
+}
+
+.bestPrice-textBox {
+    background: rgba(255, 118, 71, 1);
+    border-radius: 5px 0px 0px 5px;
+    
+}
+
+.bestPrice-text {
+    padding: 4px 4px 5px 16px;
+    color: rgba(255, 255, 255, 1);
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0em;
+}
+
 .room__title {
     font-family: Roboto;
     font-size: 24px;
@@ -93,6 +116,29 @@ html, body {
     letter-spacing: 0em;
     text-align: left;
     color: rgba(255, 255, 255, 1);
+}
+
+.room__title-mousover {
+    font-family: Roboto;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.room__title-checked {
+    font-family: Roboto;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: rgba(255, 255, 255, 0.7);
+    cursor: pointer;
 }
 
 .room__text {
@@ -105,12 +151,16 @@ html, body {
     color: rgba(255, 255, 255, 1);
 }
 
+.reserved {
+    display: none;
+}
+
 .price-block {
-    width: 372px;
+    width: 317px;
     height: 70px;
-    top: 276px;
     display: flex;
     flex-direction: row;
+    border-top: 1px solid rgba(255, 255, 255, 0.2); 	
 }
 
 .price-value {
@@ -122,9 +172,8 @@ html, body {
     font-family: OpenSans;
     font-size: 16px;
     font-weight: 700;
-    padding-left: 20px;
     height: 20px;
-    margin: 5px;
+    margin: 5px 5px 5px 0px;
     letter-spacing: 0em;
     text-align: left;
     color: rgba(255, 255, 255, 1);
@@ -134,10 +183,9 @@ html, body {
     font-family: OpenSans;
     font-size: 19px;
     font-weight: 700;
-    padding-left: 20px;
     padding-right: 5px;
     height: 20px;
-    margin: 5px;
+    margin: 5px 5px 5px 0px;
     letter-spacing: 0em;
     text-align: left;
     color: rgba(255, 255, 255, 1);
@@ -172,7 +220,7 @@ html, body {
 }
 
 .price-button {
-    margin: 10px 10px 10px 15px;
+    margin: 10px 0px 10px 15px;
     font-family: OpenSans;
     font-size: 16px;
     font-weight: 700;
@@ -184,4 +232,37 @@ html, body {
     height: 48px;
     border-radius: 5px;
     background: rgba(249, 17, 85, 1);
+}
+
+.price-button-checked {
+    margin: 10px 0px 10px 15px;
+    font-family: OpenSans;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: rgba(249, 99, 124, 1);
+    width: 180px;
+    height: 48px;
+    border-radius: 5px;
+    background: rgba(216, 0, 63, 1);
+    cursor: pointer;
+}
+
+.price-button-mousover {
+    margin: 10px 0px 10px 15px;
+    font-family: OpenSans;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
+    width: 180px;
+    height: 48px;
+    border-radius: 5px;
+    background: rgba(216, 0, 63, 1);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
 }
