--- a/styles/room.css
+++ b/styles/room.css
@@ -83,8 +83,6 @@ body {
     padding: 0px 20px 0px 20px;
 }
 
-
-
 .discount {
     display: none;
     flex-direction: row;
@@ -151,6 +149,7 @@ body {
     text-align: left;
     color: rgba(255, 255, 255, 1);
     padding-bottom: 7px;
+   
 }
 
 .divid-line {
@@ -160,10 +159,21 @@ body {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
+.room__nonReserved {
+    display: flex;
+    flex-direction: column;
+}
+
+.room__Reserved {
+    display: none;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.4);
+}
+
 .reserved {
     size: 100%;
-    height: 110px;
-    display: none;
+    height: 90px;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
